# localpost-server

./: .gitignore  Cargo.toml  README.md  TODO.txt
src/: main.rs  model.rs  repository.rs  util.rs  view.rs
templates/: admin.html  index.html  user.html
templates/static/: index.js  style.css
