[package]
name = "localpost-server"
version = "1.1.0"
authors = ["alexesmet <alexes.met@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.24.2"
itertools = "0.10.0"
chrono = "0.4.19"
tera = "1.6.1"
base64 = "0.13.0"
ascii = "1.0.0"
blake3 = "0.3.7"
regex = "1.4.3"
tide-compress = "0.8.1"
